BUG/card-is-not-visible

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -523,6 +523,7 @@ body {
   color: white;
   background-color: var(--old-rose);
   border-radius: var(--radius-5);
+
 }
 
 .btn-secondary:is(:hover, :focus) {
@@ -1269,7 +1270,7 @@ body.dark-mode .chapter-card:hover {
 \*-----------------------------------*/
 
 .pricing-card {
-  padding: 40px 50px;
+  padding: 20px 50px;
   background-color: var(--seashell);
   text-align: center;
   transition: var(--transition-2);
@@ -1300,7 +1301,7 @@ body.dark-mode .chapter-card:hover {
 }
 
 .pricing-card-list {
-  margin-block: 20px 40px;
+  margin-block: 8px 40px;
   flex-grow: 1;
 }
 
@@ -1309,13 +1310,13 @@ body.dark-mode .chapter-card:hover {
 }
 
 .pricing-card .card-text {
-  padding-block: 10px;
+  padding-block: 0px;
 }
 
 .pricing-card .btn {
   margin-inline: auto;
   align-self: center;
-  margin-top: auto;
+  margin-top: -140px;
 }
 
 /*-----------------------------------*\
@@ -3515,7 +3516,7 @@ body.dark-mode .h2,
 body.dark-mode .h3 {
   color: #ffffff;
   margin: 0 10px;
-  margin-top: 100px;
+  margin-top: 0px;
 }
 
 .container00.dark-mode,
@@ -3553,7 +3554,7 @@ body.dark-mode .h3 {
 }
 
 .pricing-card {
-  height: 70rem;
+  height: 55rem;
 }
 
 .card-title {
